--- a/app/styles/common.styl
+++ b/app/styles/common.styl
@@ -2,10 +2,18 @@
 
 
 //@import 'base/norm'
+
+
 @import 'base/kit'
-@import 'base/main'
-@import 'base/aside'
+@import 'base/tpgr'
+@import 'base/action'
+@import 'base/icon'
 
 
-
-//@import 'blocks/bignav'
+@import 'blocks/main'
+@import 'blocks/s_1'
+@import 'blocks/s_2'
+@import 'blocks/s_3'
+@import 'blocks/s_4'
+@import 'blocks/s_5'
+@import 'blocks/to_catalog'
