--- a/app/styles/base/kit.styl
+++ b/app/styles/base/kit.styl
@@ -3,58 +3,32 @@
   margin 0
   padding 0
 
+
+
+
 html, body
   height 100%
 
-
-
 body
-
-  font-size 14px
-  //font-weight 400
-  font-family: 'Roboto', sans-serif;
+  font 1em/1.5 'Roboto', sans-serif
+  color #444
 
 
-
-  padding-bottom 100px
-  text-align center
-
-.sec_1
-  min-height 100vh //100% //100vh
-  background url(../img/test_bg.jpg) center/cover no-repeat
-
-  //position relative
-  width 100%
-  color #FFF
-
-
-main, aside
-  text-align left
 
 C_W()
   width 800px
   margin auto
 
-//.wrap()
 
 
-
-
-a
-  color #FFF
-ul
-  list-style none
-
-
-.btn
-  display inline-block
-  border 1px solid rgba(#FFF, .7)
-  padding .5em 1em
-  text-decoration none
-  &:hover
-    background rgba(#FFF,.2)
-
-  &.blue
-    background #0071bb
-  &.red
-    background #ff4242
+section
+  cf()
+  background #EEE
+  h1
+    color #0071bb
+    font-size 2.4em //36px
+    font-weight 400
+ra
+  h2
+    color #f7403a
+    font-size 1.4em //20px
