--- a/app/styles/base/kit.styl
+++ b/app/styles/base/kit.styl
@@ -12,7 +12,7 @@ html, body
 body
   font 1em/1.5 'Roboto', sans-serif
   color #444
-
+  background #EEE
 
 
 C_W()
@@ -22,13 +22,16 @@ C_W()
 
 
 section
+  padding 2em 0
+  
   cf()
-  background #EEE
+  C_W()
+
   h1
     color #0071bb
     font-size 2.4em //36px
     font-weight 400
-ra
+
   h2
     color #f7403a
     font-size 1.4em //20px
