--- a/app/styles/blocks/s_1.styl
+++ b/app/styles/blocks/s_1.styl
@@ -1,11 +1,16 @@
 .tablist
   width 20%
   float left
+  text-align center
   a
 
     display block
     padding-top 60px
-    background url('http://placehold.it/50') no-repeat
+
+    color #777
+
+    text-decoration none
+    background url('http://placehold.it/50') top center no-repeat
 
 
 
