--- a/app/styles/blocks/main.styl
+++ b/app/styles/blocks/main.styl
@@ -1,20 +1,10 @@
-absR()
-  position absolute
-  top 0
-  right 0
-  //width 400px
-  height 100vh
-  background rgba(20, 70, 155, 0.7)
-
-
 #main
 
-  text-align center
   min-height 100vh //100% //100vh
   background url(../img/test_bg.jpg) center/cover no-repeat
-
+  display flex
   //position relative
-  width 100%
+
   color #FFF
   a
     color #FFF
@@ -33,12 +23,8 @@ absR()
     //clear both
 
     padding 1em 2em
-    //background rgba(20, 70, 155, 0.7)
-    background rgb(20, 70, 155) //#14469B
-
-
-
-
+    background rgba(20, 70, 155, 0.7)
+    //background rgb(20, 70, 155) //#14469B
 
   h2
     margin 1em 0
@@ -46,15 +32,11 @@ absR()
     font-size 25px
     line-height 30px
 
-
   ul
     margin 0 0 2em
     li
       &:before
         content '✔ ';
-
-
-
 
 
   .intro-Modulator
