--- a/app/styles/common.styl
+++ b/app/styles/common.styl
@@ -17,3 +17,8 @@
 @import 'blocks/s_4'
 @import 'blocks/s_5'
 @import 'blocks/to_catalog'
+
+@import 'blocks/about'
+@import 'blocks/news'
+@import 'blocks/photo'
+@import 'blocks/footer'
