--- a/app/styles/base/kit.styl
+++ b/app/styles/base/kit.styl
@@ -1,7 +1,7 @@
-*
-  box-sizing border-box
-  margin 0
-  padding 0
+// *
+//   box-sizing border-box
+//   margin 0
+//   padding 0
 
 
 
@@ -10,20 +10,22 @@ html, body
   height 100%
 
 body
-  font 1em/1.5 'Roboto', sans-serif
+  font 300 1em/1.5 'Roboto', sans-serif
+  //font-family 'Roboto', sans-serif
   color #444
-  background #EEE
+  //background #EEE
+
+
 
 
 C_W()
-  width 800px
+  width 860px
   margin auto
-
 
 
 section
   padding 2em 0
-  
+
   cf()
   C_W()
 
@@ -35,3 +37,12 @@ section
   h2
     color #f7403a
     font-size 1.4em //20px
+
+
+.kineticScroll
+  background url(../img/bg-point.svg) #E2E4E6
+  h3
+    color #777
+
+.tgl-list
+  margin-bottom 2em
