--- a/app/styles/blocks/s_1.styl
+++ b/app/styles/blocks/s_1.styl
@@ -8,8 +8,10 @@
     padding-top 60px
 
     color #777
+    font-weight 400
 
     text-decoration none
+
     background url('http://placehold.it/50') top center no-repeat
 
 
