--- a/app/styles/blocks/s_3.styl
+++ b/app/styles/blocks/s_3.styl
@@ -3,12 +3,15 @@
   background url(../img/map_.png) no-repeat center
 
   b
+
+
     font-size 8em
-    color #CCC
+    color #FFF
     //cycle:3
     span(1/3)
     position relative
-    text-shadow: .04em .04em 0 #fff,.08em .08em 0 #aaa
+    //text-shadow: .04em .04em 0 #fff,.08em .08em 0 #aaa
+    text-shadow: 0 0 .1ex rgba(0, 0, 0, 0.1), 0 5px 0 #EEE, .1ex .1ex .5ex rgba(0, 0, 0, 0.6);
     i
       text-shadow none
       position absolute
@@ -20,6 +23,9 @@
 
 
 .ul_1
+
+
+
   li
     span(1/3)
     position relative
@@ -34,6 +40,11 @@
 
 
 .ul_2
+
+  font-size 1.2em
+  font-weight 400
+
+
   padding 0 4em
   color #0071bb
   li:nth-child(odd)
