--- a/app/styles/common.styl
+++ b/app/styles/common.styl
@@ -3,9 +3,10 @@
 
 //@import 'base/norm'
 
+@import 'base/norm'
 
-@import 'base/kit'
 @import 'base/tpgr'
+@import 'base/kit'
 @import 'base/action'
 @import 'base/icon'
 
