--- a/app/styles/blocks/footer.styl
+++ b/app/styles/blocks/footer.styl
@@ -1,15 +1,19 @@
 footer
   width 1000px
 
-  margin 0 auto
+  margin 5em auto
 
   color #000
   display flex
 
-  nav,address,form
-    width 25%
+  justify-content space-around
+
+  address,form
+    width 20%
+    //width 30%
 
   nav
+    //width 20%
     a
       display block
       color #000
