--- a/app/styles/blocks/main.styl
+++ b/app/styles/blocks/main.styl
@@ -1,27 +1,41 @@
 #main
 
-  min-height 100vh //100% //100vh
-  background url(../img/test_bg.jpg) center/cover no-repeat
+
+
+  min-height 100vh //100%
+  //background url(../img/test_bg.jpg) center/cover no-repeat
   display flex
-  //position relative
+
+  position relative
 
   color #FFF
   a
     color #FFF
 
-  .block
-    C_900()
-    //float left
-    //width 360px
+
+
+
+  video
+    position absolute
+    top 0
+    left 0
+    z-index -1
+    min-width 100%
+    min-height 100%
+
+
+
+
+
+
+
+
 
   main, aside
-    text-align left
+    //text-align left
 
 
   aside
-    //cf()
-    //clear both
-
     padding 1em 2em
     background rgba(20, 70, 155, 0.7)
     //background rgb(20, 70, 155) //#14469B
