--- a/app/styles/blocks/to_catalog.styl
+++ b/app/styles/blocks/to_catalog.styl
@@ -1,3 +1,14 @@
 .grid
+  cf()
+  margin-bottom 2em
+
   .item
     col(1/3, cycle:3)
+
+  // h3
+  //   margin-bottom 0
+
+  i
+    font-family 'Trebuchet MS', Tahoma
+    font-size 1.4em
+    color #666
