--- a/app/styles/blocks/s_3.styl
+++ b/app/styles/blocks/s_3.styl
@@ -2,40 +2,32 @@
 
   background url(../img/map_.png) no-repeat center
 
+  //цифры
   b
-
-
     font-size 8em
     color #FFF
-    //cycle:3
-    span(1/3)
-    position relative
-    //text-shadow: .04em .04em 0 #fff,.08em .08em 0 #aaa
     text-shadow: 0 0 .1ex rgba(0, 0, 0, 0.1), 0 5px 0 #EEE, .1ex .1ex .5ex rgba(0, 0, 0, 0.6);
-    i
-      text-shadow none
-      position absolute
-      top 50%
-      left 50%
-      font-size 20px
-      font-style normal
-      color #0071bb
+
+
+
 
 
 .ul_1
-
-
-
+  cf()
   li
     span(1/3)
     position relative
-    span
-      position absolute
-      top 50%
-      left 50%
 
+    text-align center
+    span
+      text-align left
+      position absolute
+      top 70%
+      left 70%
       color #0071bb
       font-weight bold
+      font-size 1.4em
+      line-height 1
 
 
 
@@ -43,12 +35,12 @@
 
   font-size 1.2em
   font-weight 400
+  margin 2em 0
 
-
-  padding 0 4em
+  width 80%
+  transform translateX(25%)
+  //padding 0 4em
   color #0071bb
   li:nth-child(odd)
     float right
     width 50%
-
-  margin-bottom 3em
