--- a/app/styles/blocks/to_catalog.styl
+++ b/app/styles/blocks/to_catalog.styl
@@ -1,12 +1,25 @@
 .grid
-  cf()
+  //cf()
   margin-bottom 2em
 
-  .item
-    col(1/3, cycle:3)
+  display flex
 
-  // h3
-  //   margin-bottom 0
+  flex-wrap wrap
+  //justify-content center //space-around
+  justify-content space-between
+
+  //костыль!
+  //margin-left 3em
+  .item
+    //col(1/3, cycle:3)
+    //width calc(100%/3)//33.3%
+    width 30%
+
+    //костыль!
+    img
+      width 100%
+
+
 
   i
     font-family 'Trebuchet MS', Tahoma
