--- a/app/styles/base/kit.styl
+++ b/app/styles/base/kit.styl
@@ -22,6 +22,21 @@ section
   cf()
   C_W()
 
+  header
+    cf()
+    h1
+      //float left
+      display inline-block
+    a
+      //display inline-block
+      vertical-align super
+      margin-left 1em
+      color #0071bb
+      font-weight 400
+
+
+
+
   h1
     color #0071bb
     font-size 2.4em //36px
