--- a/app/styles/blocks/s_2.styl
+++ b/app/styles/blocks/s_2.styl
@@ -1,60 +1,70 @@
 
-
-
-
 setNthBg()
   for i in (1..50)
     //&:nth-of-type({index + 1})
     &:nth-child({i})
       background hsl(i * 5, 90%, 50%)
 
+
+box-shadow()
+  //box-shadow 0 0 10px #000
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.24)
+
+
 .colorpicker
   width 450px
   float left
-  margin-right 1em
+  margin-right 2em
   a
     text-decoration none
 
     float left
     width 45px
     height 45px
-    background #EEE
+    //background #EEE
+
     setNthBg()
 
     position relative
 
     &:hover
       z-index 1
-      border 1px solid #FFF
-      box-shadow 0 0 10px #000
+      border 2px solid #FFF
+      box-shadow()
+
+      //background-image url(../img/color_hover.svg)
+      //background-position center
+      //background-repeat no-repeat
+
+
       &:before
-        content '✔'
-
+      &:after
         position absolute
-        top 50%
-        left 50%
 
-        width 20px
-        height 20px
-        border 2px solid #FFF
-        border-radius 50%
-
-        transform translate(-50%, -50%)
-
+      &:before
+        content '▼'
+        left 50% //-2em
+        transform translateX(-50%)
+        z-index 2
+        bottom 2.3em
         color #FFF
 
+        //width
+        //height
 
       &:after
         content attr(data-color)
+        white-space nowrap
+        color #999
 
-        color #000
+        left 0 //-1em
+        top -2.5em
+        //border 1px solid #DDD
 
-        position absolute
-        left -2em
-        bottom 3.2em
-        border 4px solid #DDD
-        //width 200px
-        //height 60px
 
         background #FFF
-        padding 1em
+        padding 0 .5em
+        //height 1.8em
+        line-height 1.8em
+
+        box-shadow()
