--- a/app/styles/base/icon.styl
+++ b/app/styles/base/icon.styl
@@ -9,12 +9,12 @@
     // &:hover
     // &:active
 
-  &.vk
-    //background url(../img/i-vk.png) center no-repeat
-  &.f
-    //background url(../img/i-f.png) center no-repeat
-  //odnoklassniki
-  &.ok
-    //background url(../img/i-youtube.png) center no-repeat
-  &.youtube
-    //background url(../img/i-youtube.png) center no-repeat
+    &.vk
+      background url(../img/icon/vk_w.png) center no-repeat
+    &.f
+      background url(../img/icon/f_w.png) center no-repeat
+    odnoklassniki
+    &.ok
+      background url(../img/icon/ok_w.png) center no-repeat
+    &.youtube
+      background url(../img/icon/youtube_w.png) center no-repeat
