--- a/app/styles/blocks/main.styl
+++ b/app/styles/blocks/main.styl
@@ -73,44 +73,89 @@
 
 
 
-  main
-    C_W()
-    padding 2em 0 0
+.main
+  C_W()
+  padding 2em 0 0
 
 
 
-    h1
-      background url(../img/logo.png) center 20px no-repeat
+  h1
+    background url(../img/logo.png) center 20px no-repeat
 
-      font-size 16px
-      font-weight 400
-      text-align center
-      padding 240px 0 50px
-    nav
-      padding 2em 0
-      a
-        padding-right 2em
-
-  .icon
-    width 600px
-    margin 0 auto 10em
-
-    padding-top 120px
+    font-size 16px
+    font-weight 400
     text-align center
+    padding 240px 0 50px
+  nav
+    padding 2em 0
     a
-      position relative
-      text-decoration none
-      float left
-      width 100px
-
-      &:before
-        content ''
-        position absolute
-        top -70px
-        left 50px
-        margin-left -25px
+      padding-right 2em
 
 
-        width 50px
-        height 50px
-        background rgba(#FFF, .5)
+
+
+
+//
+.main-icon
+  width 600px
+  margin 0 auto 10em
+
+  padding-top 120px
+  text-align center
+  a
+    position relative
+    text-decoration none
+    float left
+    width 100px
+
+    &:before
+      content ''
+      position absolute
+      top -70px
+      left 50px
+      margin-left -30px
+
+
+      width 60px
+      height 60px
+      //background rgba(#FFF, .5)
+    &:nth-child(1):before
+      background url(../img/svg_main/drain.svg)
+
+    &:nth-child(2):before
+      background url(../img/svg_main/interior_trim.svg)
+
+    &:nth-child(3):before
+      background url(../img/svg_main/lawn_panel.svg)
+
+    &:nth-child(4):before
+      background url(../img/svg_main/mount.svg)
+
+    &:nth-child(5):before
+      background url(../img/svg_main/rainwater_system.svg)
+
+
+
+
+/*
+drain
+interior_trim
+lawn_panel
+mount
+rainwater_system
+roof
+siding
+the_front_panel
+
+
+водосток
+Интерьер салона
+газон панель
+крепление
+система дождевой
+крыша
+сайдинг
+передняя панель
+
+
+*/
