--- a/app/styles/blocks/to_catalog.styl
+++ b/app/styles/blocks/to_catalog.styl
@@ -1,6 +1,6 @@
 .grid
   //cf()
-  margin-bottom 2em
+
 
   display flex
 
@@ -13,15 +13,26 @@
   .item
     //col(1/3, cycle:3)
     //width calc(100%/3)//33.3%
-    width 30%
+    width 31%
 
     //костыль!
     img
       width 100%
+    p
+      margin 0
+    p + p
+      margin-bottom 2.6em
 
 
 
-  i
-    font-family 'Trebuchet MS', Tahoma
-    font-size 1.4em
-    color #666
+//костыль!!!
+  .more
+    display inline-block
+    margin-bottom 2em
+    color #999
+    font-size 1.2em
+
+    text-decoration none
+    border-bottom 1px dashed #999
+    &:hover
+      border-bottom 1px solid #999
