--- a/app/styles/base/icon.styl
+++ b/app/styles/base/icon.styl
@@ -6,15 +6,21 @@
     display inline-block
     width 20px
     height 20px
-    // &:hover
+
+    background-position center
+    background-repeat no-repeat
+
+
+    &:hover
+      background-color #E00C1B //rgba(#000, .5)
     // &:active
 
     &.vk
-      background url(../img/icon/vk_w.png) center no-repeat
+      background-image url(../img/icon/vk_w.png)
     &.f
-      background url(../img/icon/f_w.png) center no-repeat
-    odnoklassniki
+      background-image url(../img/icon/f_w.png)
+    //odnoklassniki
     &.ok
-      background url(../img/icon/ok_w.png) center no-repeat
+      background-image url(../img/icon/ok_w.png)
     &.youtube
-      background url(../img/icon/youtube_w.png) center no-repeat
+      background-image url(../img/icon/youtube_w.png)
