--- a/app/styles/base/kit.styl
+++ b/app/styles/base/kit.styl
@@ -4,7 +4,7 @@ html, body
   height 100%
 
 body
-  font 400 1em/1.5 'Roboto', sans-serif
+  font 300 1em/1.5 'Roboto', sans-serif
   //font-family 'Roboto', sans-serif
   color #444
   //background #EEE
@@ -47,11 +47,18 @@ section
     font-size 1.4em //20px
 
 
-.kineticScroll
+
+
+
+
+.section
   background url(../img/bg-point.svg) #E2E4E6
 
-  // .section
-  //   background url(../img/bg-point.svg) #E2E4E6
+
+.kineticScroll
+  //background url(../img/bg-point.svg) #E2E4E6
+  //height 500vh
+
   h3
     color #777
 
