--- a/app/styles/blocks/js-fullpage.styl
+++ b/app/styles/blocks/js-fullpage.styl
@@ -30,9 +30,11 @@ html.fp-enabled,
   transition all 0.3s ease-out
 
 .fp-section.fp-table, .fp-slide.fp-table
-  //display table
-  //table-layout fixed
-  //width 100%
+  display table
+  table-layout fixed
+  width 100%
+  //!my
+  height 100%
 
 .fp-tableCell
   display table-cell
