--- a/app/styles/blocks/s_3.styl
+++ b/app/styles/blocks/s_3.styl
@@ -1,6 +1,16 @@
 #s_3
 
+
   background url(../img/map_.png) no-repeat center
+  //background url(../img/bg-point.svg) #E2E4E6
+
+  //multi_bg_
+  // background-image: #E2E4E6, url(../img/bg-point.svg), url(../img/map_.png);
+  // background-repeat: repeat, repeat, no-repeat;
+  // background-position: center, left;
+
+
+
 
   //цифры
   b
