--- a/app/styles/common.styl
+++ b/app/styles/common.styl
@@ -13,11 +13,14 @@
 
 
 @import 'blocks/main'
+
+@import 'blocks/js-fullpage'
 @import 'blocks/s_1'
 @import 'blocks/s_2'
 @import 'blocks/s_3'
 @import 'blocks/s_4'
 @import 'blocks/s_5'
+
 @import 'blocks/to_catalog'
 
 @import 'blocks/about'
