--- a/app/styles/base/action.styl
+++ b/app/styles/base/action.styl
@@ -1,4 +1,25 @@
+#TEST_SECOND_NAV
 
+  &.fixed
+    position fixed
+    top 0
+    left 0
+    width 100%
+    z-index 10
+    background rgba(#FFF, .5)
+
+  a
+    text-decoration none
+    color #000
+    display inline-block
+    padding 0 1em
+
+
+
+
+
+
+//===============================
 .btn
   display inline-block
   border 1px solid rgba(#FFF, .7)
