--- a/app/styles/blocks/main.styl
+++ b/app/styles/blocks/main.styl
@@ -14,12 +14,15 @@
 
 
   video
-    position absolute
+    position fixed //absolute
     top 0
     left 0
     z-index -1
     min-width 100%
     min-height 100%
+
+    //height auto
+    //background-size cover
 
 
 
