--- a/app/styles/base/action.styl
+++ b/app/styles/base/action.styl
@@ -1,12 +1,15 @@
 #TEST_SECOND_NAV
+  C_W()
+  padding 1em 0
 
   &.fixed
     position fixed
     top 0
     left 0
-    width 100%
+    right 0
+    //width 100%
     z-index 10
-    background rgba(#FFF, .5)
+    background rgba(#FFF, .7)
 
   a
     text-decoration none
