--- a/app/styles/base/kit.styl
+++ b/app/styles/base/kit.styl
@@ -1,5 +1,3 @@
-
-
 html, body
   height 100%
 
@@ -12,8 +10,9 @@ body
 
 
 C_W()
-  width 860px
+  max-width 900px
   margin auto
+  padding 20px
 
 
 section
