--- a/app/styles/blocks/main.styl
+++ b/app/styles/blocks/main.styl
@@ -33,9 +33,18 @@
 
 
   aside
+
+    background #14469B
     padding 1em 2em
-    background rgba(20, 70, 155, 0.7)
+
+    width 100%
+
     //background rgb(20, 70, 155) //#14469B
+
+    @media (min-width 1200px)
+      background rgba(20, 70, 155, 0.7)
+      width 30%
+
 
   h2
     margin 1em 0
