--- a/app/styles/blocks/s_3.styl
+++ b/app/styles/blocks/s_3.styl
@@ -16,7 +16,8 @@
   b
     font-size 8em
     color #FFF
-    text-shadow: 0 0 .1ex rgba(0, 0, 0, 0.1), 0 5px 0 #EEE, .1ex .1ex .5ex rgba(0, 0, 0, 0.6);
+    //text-shadow: 0 0 .1ex rgba(0, 0, 0, 0.1), 0 5px 0 #EEE, .1ex .1ex .5ex
+    text-shadow: 0 5px 0 #EEE, .1ex .1ex .5ex rgba(0, 0, 0, 0.6);
 
 
 
