--- a/app/styles/blocks/main.styl
+++ b/app/styles/blocks/main.styl
@@ -41,9 +41,10 @@
 
     //background rgb(20, 70, 155) //#14469B
 
-    @media (min-width 1200px)
+    @media (min-width 1100px)
       background rgba(20, 70, 155, 0.7)
       width 30%
+      min-width 460px
 
 
   h2
@@ -82,7 +83,13 @@
 
 .main
   C_W()
-  padding 2em 0 0
+  padding 2em
+
+  @media (min-width 1100px)
+
+    width 50%
+    min-width 600px
+
 
   h1
     background url(../img/logo.png) center 20px no-repeat
@@ -94,7 +101,8 @@
   nav
     padding 2em 0
     a
-      padding-right 2em
+      padding-right 3%
+      text-decoration none
 
 
 
